# dongne-ad-pipeline

./: .env.example  .gitignore  AGENT.md  GEMINI.md  auto_render.py  check_fal.py  check_models.py  config.py  create_demo_assets.py  main.py  pyproject.toml  render.py  render_clips.py  render_sets.py  render_story.py  run_pipeline.py  store_sample.md  test_render.py  test_render_only.py  test_story.py  test_upan.py
agents/: evaluator.py  refiner.py
effects/: ken_burns.py  overlay.py  qr_overlay.py  text_overlay.py
pipeline/: __init__.py  api.py  client.py  comfyui_client.py  google_client.py  models.py  ollama_client.py  orchestrator.py  skill_01_analyze.py  skill_02_storyboard.py  skill_03_gen_image.py  skill_04_analyze_frame.py  skill_05_gen_video.py  skill_06_render.py
pipeline/workflows/: flux_t2i_api.json  ltxv_i2v_api.json
skills/: skill_01_analyze_images.md  skill_02_storyboard.md  skill_03_image_prompts.md  skill_04_analyze_frames.md  skill_05_video_prompts.md  skill_06_render.md
templates/: scene1_hook.py  scene2_value.py  scene3_mood.py  scene4_cta.py  scene_story.py
workspace/: 03_storyboard.json
